--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ My professional journey is complemented by a profound appreciation for the arts 
                   <div class="experience-card-s1__org mt-2">
                     University of Liberal Arts Bangladesh
                   </div>
-                  <div class="experience-card-s1__duration">March 2020 – Present</div>
+                  <div class="experience-card-s1__duration">March 2021 – Present</div>
                 </div>
                 <div class="wow fadeInLeft" data-wow-delay="0.2s">
                   <div class="experience-card-s1__title">Bachelor of Business Administration (BBA), Marketing</div>
@@ -650,7 +650,7 @@ My professional journey is complemented by a profound appreciation for the arts 
               <div class="project-box-container wow scalexIn" data-wow-duration="1s">
                 <!-- <a href="https://www.youtube.com/watch?v=xgk5N4rCJIw" data-type="youtube" -->
                   <!-- data-fslightbox="lightbox-projects"> -->
-                  <img src="assets/images/projects/3.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <img src="assets/images/projects/7.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
                   <div class="content-overlay">
                     <!-- <div>
                       <div class="project-title">Company Profile</div>
@@ -686,7 +686,7 @@ My professional journey is complemented by a profound appreciation for the arts 
             <div class="project-box mt-lg-5">
               <div class="project-box-container wow scalexIn" data-wow-duration="1s">
                 <!-- <a href="project-detail.html" target="_blank"> -->
-                  <img src="assets/images/projects/2.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <img src="assets/images/projects/14.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
                   <div class="content-overlay">
                     <!-- <div>
                       <div class="project-title">Landing Page</div>
@@ -715,12 +715,216 @@ My professional journey is complemented by a profound appreciation for the arts 
             </div>
             <!-- /Project Box (External Page) -->
           </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/2.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/6.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/8.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/9.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/11.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/12.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/13.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                 <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/3.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+             <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/16.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                           <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/17.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                           <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/15.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
+                           <div class="col-lg-4">
+            <!-- Project Box (External Page) -->
+            <div class="project-box">
+              <div class="project-box-container wow scalexIn" data-wow-duration="1s">
+                <!-- <a href="project-detail.html" target="_blank"> -->
+                  <img src="assets/images/projects/18.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <div class="content-overlay">
+                    <!-- <div>
+                      <div class="project-title">Logo Redesign</div>
+                      <div class="project-description">Detail Page</div>
+                    </div> -->
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- /Project Box (External Page) -->
+          </div>
           <div class="col-lg-4">
             <!-- Project Box (External Page) -->
             <div class="project-box mt-lg-5">
               <div class="project-box-container wow scalexIn" data-wow-duration="1s">
                 <!-- <a href="project-detail.html" target="_blank"> -->
-                  <img src="assets/images/projects/6.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <img src="assets/images/projects/10.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
                   <div class="content-overlay">
                     <!-- <div>
                       <div class="project-title">Custom App</div>
@@ -828,19 +1032,17 @@ My professional journey is complemented by a profound appreciation for the arts 
             <!-- Blog Card Item -->
             <div class="blog-card wow fadeInLeft" data-wow-offset="0" data-wow-delay="0.4s">
               <div class="blog-card__img">
-                <!-- <a href="./blog-single.html"> -->
+                <a href="https://www.unicefventurefund.org/story/moner-bondhu-transforming-childrens-well-being-bangladesh">
                   <span class="visually-hidden">Add link description</span>
-                  <!-- <img src="./assets/images/blog/blog-3.jp" alt="Add Image Description"></a> -->
+                  <img src="./assets/images/blog/blog-4.jpg" alt="Add Image Description"></a>
               </div>
               <div class="blog-card__container">
 
 
-                <h4 class="blog-card__title"><a href="">Marketing Posters</a></h4>
+                <h4 class="blog-card__title"><a href="https://www.unicefventurefund.org/story/moner-bondhu-transforming-childrens-well-being-bangladesh">Transforming Children's Well-Being in Bangladesh</a></h4>
 
                 <div class="blog-card__text">
-                  This marketing poster was created to advocate for the importance of mental health care, making a powerful statement in a prominent publication.
-                </div>
-
+                   Manush-E is an AI-powered platform by Moner Bondhu that supports children’s mental and nutritional well-being, backed by UNICEF to scale impact.
                 <div class="blog-card__info d-flex justify-content-between align-items-center">
                   <div class="d-flex gap-2 align-items-center">
                     <a href="#">
