Update index.html and add new project image

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ My professional journey is complemented by a profound appreciation for the arts 
             <div class="project-box">
               <div class="project-box-container wow scalexIn" data-wow-duration="1s">
                 <!-- <a href="project-detail.html" target="_blank"> -->
-                  <img src="assets/images/projects/17.jpg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
+                  <img src="assets/images/projects/19.jpeg" alt="" class="wow fadeIn" data-wow-delay="1.2s">
                   <div class="content-overlay">
                     <!-- <div>
                       <div class="project-title">Logo Redesign</div>
